add index.html symlink

--- a/Thesis.ipynb
+++ b/Thesis.ipynb
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "id": "b1ead34a-68e9-46e9-aa24-10ff57067897",
    "metadata": {},
    "outputs": [
@@ -602,7 +602,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "997 out of 1000 satisfied bound (ratio 0.997)\n",
+      "999 out of 1000 satisfied bound (ratio 0.999)\n",
       "Probability in theorem 0.9981059300560312\n"
      ]
     }
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "id": "444627fd-f424-4d97-bc8c-a0d56bbcf5e1",
    "metadata": {},
    "outputs": [
@@ -669,22 +669,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "984 out of 1000 satisfied bound (ratio 0.984)\n",
+      "4872 out of 5000 satisfied bound (ratio 0.9744)\n",
       "Probability in theorem 0.9838201795058529\n"
      ]
     }
    ],
    "source": [
-    "N, Q, sigma, C, counter, iterations = 2**6, 2**10, 3, 1, 0, 1000*speed\n",
+    "N, sigma, C, counter, iterations = 2**6, 3, 1, 0, 5000*speed\n",
     "y_norm = round(3*sigma)\n",
     "for i in range(iterations):\n",
+    "    y = generate_gaussian_distribution(N, 0, sigma)\n",
     "    while y.norm() != y_norm:\n",
     "        y = generate_gaussian_distribution(N, 0, sigma)\n",
     "    z = generate_ternary_distribution(N)\n",
-    "    if y.multiply(z).norm() <= C*sqrt(N)*y.norm():\n",
+    "    if y.multiply(z).norm() <= C*sqrt(N)*y_norm:\n",
     "        counter += 1\n",
     "print(f\"{counter} out of {iterations} satisfied bound (ratio {counter/iterations})\")\n",
-    "probability = erf( (C*y_norm) / sqrt((4/3) * (sigma**2 + (1/12))) )**N\n",
+    "probability = erf( (C*y_norm) / sqrt((4/3) * ((sigma**2) + (1/12))) )**N\n",
     "print(f\"Probability in theorem {probability}\")"
    ]
   },
